--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==20.1.0
 drf-yasg==1.20.0
 psycopg2==2.9.3
 python-dotenv==0.20.0
+django-extensions==3.1.5
 
 pytest-django==4.5.2
 model_bakery==1.5.0
