--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ drf-yasg==1.20.0
 psycopg2==2.9.3
 python-dotenv==0.20.0
 django-extensions==3.1.5
+whitenoise==6.2.0
 
 pytest-django==4.5.2
 model_bakery==1.5.0
